# tiri

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  fixme.md  pyproject.toml  step_summary.md
demo/: tpch_metadata.yaml  tpch_sales_config.json  tpch_supply_config.json
deploy/: README.md  app.yaml  tiri.toml.production
docs/: README.md  agents.md  api.md  concept_map.md  configuration.md  data_models.md  databricks_providers.md  demo.md  extensions.md  feedback.md  knowledge_store.md  local_providers.md  metadata.md  providers.md  roadmap.md  room_engine.md  technical-overview.md  tuning.md  vision.md
tests/fixtures/: metadata.yaml  metadata_with_schemas.yaml  schemas.json
tests/integration/: conftest.py  test_ext6_user_credentials.py
tests/unit/: test_agents.py  test_api.py  test_cli.py  test_config.py  test_config_routes.py  test_container.py  test_data_models.py  test_databricks_providers.py  test_ext6_token_chain.py  test_feedback.py  test_hypothesis_agent.py  test_knowledge.py  test_local_providers.py  test_mcp.py  test_mcp_consumption.py  test_planning_agent.py  test_providers_base.py  test_room_engine.py  test_synthesis_agent.py  test_table_selector.py
tiri/: cli.py  config.py  container.py  data_models.py
tiri/api/: auth.py  main.py
tiri/engine/: room_engine.py
tiri/feedback/: benchmark_runner.py  collector.py  proposer.py  sql_normalize.py
tiri/knowledge/: context_builder.py  (+5 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+69 files in other folders)
