[project]
name = "tiri"
version = "0.0.1"
description = "Tiri — a data reasoning system over Databricks data"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
databricks = [
    "httpx>=0.27",
    "databricks-sdk>=0.30",
]
local = [
    "httpx>=0.27",
    "openai>=1.40",
    "anthropic>=0.30",
    "duckdb>=1.0",
    "chromadb>=0.5",
    "pyyaml>=6.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
    "databricks-sdk>=0.30",
    "openai>=1.40",
    "anthropic>=0.30",
    "duckdb>=1.0",
    "chromadb>=0.5",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tiri*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live Databricks workspace; skipped unless INTEGRATION_TESTS=true",
]
